# Rust-Document-p2p-Search

./: .gitignore  Cargo.toml  README.md  README.sh  READ_ME.sh  readme
src/: config.rs  how_to_use.txt  iam.rs  iam_net.rs  main.rs  pdf_text_extractor.rs  vector_idx.rs  web_server.rs
src/web/: app.css  app.js  index.html
web/: app.css  app.js  index.html
